@@ -121,6 +121,8 @@ src/icons-png/gamma.png -text
 src/icons-png/hue.png -text
 src/icons-png/info.png -text
 src/icons-png/input_devices.png -text
+src/icons-png/instance1.png -text
+src/icons-png/instance2.png -text
 src/icons-png/keyboard.png -text
 src/icons-png/license.png -text
 src/icons-png/logo.png -text
